# Nearby-JWST-Galaxy-Tracking

./: README.md  pyproject.toml  requirements.txt
config/: targets_example.yaml
docs/: methodology.md
jwst_tracker/: catalog.py  cli.py  config.py  download.py  mast_client.py  plots.py
